# tmp/go-redfish/spec/openapi.yaml
@@ -324,6 +324,31 @@ paths:
               schema:
                 $ref: '#/components/schemas/RedfishError'
           description: Error condition
+  /redfish/v1/UpdateService/FirmwareInventory/{softwareId}:
+    get:
+      operationId: get_software_inventory
+      parameters:
+      - description: ID of resource
+        explode: false
+        in: path
+        name: softwareId
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SoftwareInventory'
+          description: Get Software Inventory
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RedfishError'
+          description: Error condition
   /redfish/v1/UpdateService/FirmwareInventory:
     get:
       operationId: Firmware_Inventory
@@ -337,7 +362,6 @@ paths:
     post:
       operationId: FirmwareInventory_Download_Image
       requestBody:
-        $ref: '#/components/requestBodies/inline_object'
         content:
           multipart/formdata:
             encoding:
@@ -501,13 +525,6 @@ paths:
                 $ref: '#/components/schemas/RedfishError'
           description: Error condition
 components:
-  requestBodies:
-    inline_object:
-      content:
-        multipart/formdata:
-          schema:
-            $ref: '#/components/schemas/inline_object'
-      required: true
   schemas:
     BootSource:
       enum:
@@ -1596,7 +1613,6 @@ components:
           type: string
         EndTime:
           description: The date-time stamp that the task was last completed.
-          format: date-time
           readOnly: true
           type: string
           x-longDescription: The value of this property shall indicate the time the
@@ -1703,11 +1719,83 @@ components:
       - Name
       - VolumeType
       type: object
-    inline_object:
+    SoftwareInventory:
+      additionalProperties: false
+      description: This schema defines an inventory of software components.
       properties:
-        softwareImage:
-          format: binary
+        '@odata.type':
+          readOnly: true
           type: string
+        '@odata.id':
+          format: uri-reference
+          readOnly: true
+          type: string
+        '@odata.context':
+          format: uri-reference
+          readOnly: true
+          type: string
+        '@odata.etag':
+          readOnly: true
+          type: string
+        Description:
+          nullable: true
+          readOnly: true
+          type: string
+        Id:
+          readOnly: true
+          type: string
+        LowestSupportedVersion:
+          nullable: true
+          readOnly: true
+          type: string
+        Manufacturer:
+          nullable: true
+          readOnly: true
+          type: string
+        Name:
+          type: string
+          readOnly: true
+        RelatedItem:
+          items:
+            $ref: '#/components/schemas/idRef'
+          readOnly: true
+          type: array
+        RelatedItem@odata.count:
+          minimum: 0
+          nullable: true
+          readOnly: true
+          type: integer
+        ReleaseDate:
+          format: date-time
+          nullable: true
+          readOnly: true
+          type: string
+        SoftwareId:
+          readOnly: true
+          type: string
+        Status:
+          $ref:  '#/components/schemas/Status'
+        UefiDevicePaths:
+          items:
+            nullable: true
+            type: string
+          readOnly: true
+          type: array
+        Updateable:
+          nullable: true
+          readOnly: true
+          type: boolean
+        Version:
+          nullable: true
+          readOnly: true
+          type: string
+      required:
+      - '@odata.id'
+      - '@odata.type'
+      - Id
+      - Name
+      - Version
+      - Updateable
       type: object
     RedfishError_error:
       example:
